--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -33,4 +32,9 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+div {
+  align-items: center;
+  text-align: center;
 }
